<resources>
    <string name="app_name">Smart City</string>
    <string name="welcome">Welcome!</string>
    <string name="nota">Notes</string>
    <string name="addNote">Add Note</string>
    <string name="yes">Yes</string>
    <string name="title">Add Title</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit Note</string>
    <string name="no">No</string>
    <string name="delNote">Delete Note</string>
    <string name="confirm">Are you sure you want to delete this note?</string>
    <string name="error">Empty field</string>
    <string name="login">login</string>
    <string name="pass">Password</string>
    <string name="user">Username</string>
    <string name="title_activity_maps">Map</string>
    <string name="LoginPre">Remember Login</string>
    <string name="construction">Construction</string>
    <string name="crash">Accident</string>
    <string name="other">Other</string>

    <string-array name="types">
        <item>@string/construction</item>
        <item>@string/crash</item>
        <item>@string/san</item>
        <item>@string/other</item>
    </string-array>
    <string name="addRep">Add Report</string>
    <string name="photo">Take Photo</string>
    <string name="desc">Description</string>
    <string name="titleR">Title</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude</string>
    <string name="current">Get Current Location</string>
    <string name="editR">Edit</string>
    <string name="deleteR">Delete</string>
    <string name="infoR">The Marker was deleted</string>
    <string name="editReport">Edit Report</string>
    <string name="cancelR">Cancel</string>
    <string name="san">Sanitation</string>
    <string name="selection">Select the type</string>
</resources>