<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddReport">
    
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />

        <ImageView
            android:id="@+id/imageTaken"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/ic_image" />



        <Button
            android:id="@+id/takeP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/photo" />


        <EditText
            android:id="@+id/titleReport"
            android:layout_width="347dp"
            android:layout_height="46dp"
            android:hint="@string/titleR"
            android:layout_marginBottom="40dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/descricaoReport"
            android:layout_width="347dp"
            android:layout_height="46dp"
            android:hint="@string/desc"
            android:layout_marginBottom="40dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/latEdit"
            android:layout_width="347dp"
            android:layout_height="46dp"
            android:hint="@string/lat"
            android:layout_marginBottom="40dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/lngEdit"
            android:layout_width="347dp"
            android:layout_height="46dp"
            android:hint="@string/lng"
            android:layout_marginBottom="40dp"
            android:inputType="text" />

        <Button
            android:id="@+id/getCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/current" />

    </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/addReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:text="@string/addRep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>